devel.examples/Bad-Example/lib/Bad/Example/Role.pm
package Bad::Example::Role;
use Bad::Example::Mite -role;
requires 'missing';
1;